起動時のデータ読み込み機能を追加

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"Title":"宿題","Completed":false,"Deadline":"今日中"},{"Title":"片付け","Completed":false,"Deadline":"明日"}]
+[{"Title":"宿題","Completed":false,"Deadline":"今日中"},{"Title":"片付け","Completed":false,"Deadline":"明日"},{"Title":"Goの勉強","Completed":false,"Deadline":"ずっと"}]
